[package]
name = "weather_esp32_s2"
version = "0.1.0"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32s2-hal", version = "0.8.0" }
esp-backtrace = { version = "0.7.0", features = ["esp32s2", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.5.0", features = ["esp32s2"] }
esp-alloc = { version = "0.2.0", features = ["oom-handler"] }
epd-waveshare = { path = "../epd-waveshare" }
embedded-graphics = "0.7"
embedded-iconoir = "0.1.0"

[profile.dev.package."*"]
opt-level = 's'